--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ font-size: 16px;
 <input type="hidden" name="xml" id="xml">
 </form>
 
-<script type = "javascript">
+<script type = "text/javascript">
 function downloadData(contentType,data,filename){
 
    var link=document.createElement("A");
