--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@ var time = currentdate.getHours() + ":" + currentdate.getMinutes() + ":" + curre
 
 	<!-- this will order and display the elements for the xml record-->
     var inputs=form.elements;
+var letters = ["l","c","i","de","da"];
     for (var x=0; x<letters.length;x++)
     { nextField = letters[x]+"-fld";
     	for(var i=0;i<inputs.length;i++){
