--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ font-size: 16px;
 	<tr><td colspan = "6">C-fld[4]:<input type = "text" id = "c-fld4" name = "c-fld"></td></tr>
 	<tr><td colspan = "6">C-fld[5]:<input type = "text" id = "c-fld5" name = "c-fld"></td></tr>
 </table>
-<button  id = "submit"  onClick = "download(this.form)">Make XML</button>
+<button  id = "submit"  onClick = "send(this.form)">Make XML</button>
 </form>
 <!--onClick = "download or send(this.form)"-->
 
